@@ -56,6 +56,8 @@ Changes Since 0.3.9
 
   - Fixed bug with escaped colons indicating a literal block.
   - Fixed bug with enumerated lists (SF#1254145).
+  - Targets (implicit and explicit) inside of substitution definitions
+    are now disallowed.
 
 * docutils/parsers/rst/directives/misc.py:
 
